# OpenPCDet

./: environment.yaml  pyproject.toml  setup.py
pcdet/ops/iou3d_nms/src/: iou3d_cpu.cpp  iou3d_nms.cpp
pcdet/ops/pointnet2/pointnet2_batch/src/: ball_query.cpp  group_points.cpp  interpolate.cpp  sampling.cpp
pcdet/ops/pointnet2/pointnet2_stack/src/: ball_query.cpp  group_points.cpp  interpolate.cpp  sampling.cpp  vector_pool.cpp  voxel_query.cpp
pcdet/ops/roipoint_pool3d/src/: roipoint_pool3d.cpp
